--- a/index.html
+++ b/index.html
@@ -5,87 +5,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Bootstap CSS Link goes in head-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <title>Portfolio | Derek Cutler</title>
 </head>
 
 <body>
-    <nav>
-        <br>
-    </nav>
-    <nav>
+    <div class="jumbotron">
+        <nav>
+            <br>
+        </nav>
+        <!-- A navbar -->
+        <nav>
+            <div class="container">
+                <div class="bg-light text-dark">
+                    <div class="row">
+                            <div class="col-md-1"></div>
+                        <div class="col-md-5"><span class="align-center">
+                                <div class="font-italic">
+                                    <h1>Derek Cutler</h1>
+                                </div>
+                            </span></div>
+                        <div class="col-md-2"><span class="align-bottom"><a href="index.html">About</a></span></div>
+                        <div class="col-md-2"><span class="align-bottom"><a href="portfolio.html">Portfolio</a></span></div>
+                        <div class="col-md-2"><span class="align-bottom"><a href="contact.html">Contact</a></span></div>
+                    </div>
+                </div>
+            </div>
+
+
+        </nav>
+
+        <nav>
+            <br>
+        </nav>
+
+
+
+        <!-- A responsive layout (remember the grid, rows and columns are your friends) -->
+
         <div class="container">
-            <div class="row">
-
-                <div class="col-md-6"><span class="align-top">
-                        <h1>Derek Cutler</h1>
-                    </span></div>
-                <div class="col-md-2"><span class="align-bottom"><a href="index.html">About</a></span></div>
-                <div class="col-md-2"><span class="align-bottom"><a href="portfolio.html">Portfolio</a></span></div>
-                <div class="col-md-2"><span class="align-bottom"><a href="contact.html">Contact</a></span></div>
-
-            </div>
-        </div>
-
-
-    </nav>
-
-    <nav>
-        <br>
-    </nav>
-
-
-    <!-- A navbar -->
-
-
-    <!-- A responsive layout (remember the grid, rows and columns are your friends) -->
-
-    <section>
-        <div class="sectioncontainer">
-            <div class="section">
-                <div class="apc">
-                    <h1>About Derek:</h1>
-                </div>
-
-                <div class="aboutpicture">
-                    <img src="assets/images/Rock.jpg" alt="Derek" width="230px" height="230px">
-                </div>
-                <div class="paragragh">
-                    <ul style="list-style-type:square">
-                        <li>Derek is hard working and detail oriented.
-                            He also enjoys adventuring in the great outdoors.
-                        </li>
-                        <br>
-                        <li>When at work, he is driven to complete projects.
-                            He enjoys new working on new and exciting projects and following throught to completion.
-                        </li>
-                        <br>
-                        <li>In his spare time, you will likely find him in the great outdoors.
-                            whether mountain biking, climbing, hiking with his dog Leia, skiing or snowboarding, he
-                            likes it all.
-                        </li>
-                    </ul>
+            <div class="bg-light text-dark">
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col=md-11">
+                        <h2>About Derek:</h2>
+                    </div>
+                    <div class="row">
+                            <div class="col-md-1"></div>
+                        <div class="col-md-2">
+                            <div class="aboutpicture">
+                                <img src="assets/images/Rock.jpg" alt="Derek" width="230px" height="230px"></div>
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-7">
+                            <div class="paragragh">
+                                <ul style="list-style-type:square">
+                                    <li>Derek is hard working and detail oriented.
+                                        He also enjoys adventuring in the great outdoors.
+                                    </li>
+                                    <br>
+                                    <li>When at work, he is driven to complete projects.
+                                        He enjoys new working on new and exciting projects and following throught to
+                                        completion.
+                                    </li>
+                                    <br>
+                                    <li>In his spare time, you will likely find him in the great outdoors.
+                                        whether mountain biking, climbing, hiking with his dog Leia, skiing or
+                                        snowboarding, he
+                                        likes it all.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-1"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
-    </section>
-
-    <nav>
-        <br>
-    </nav>
-
-    <footer>
-        <div class="footercontainer">
-            copyright &copy; 2018 | Derek Cutler
+        <nav>
+            <br>
+        </nav>
+        <div class="container">
+            <div class="bg-light text-dark">
+                <div class="text-center">
+                    <div class="row">
+                        <div class="col-md-12">
+                            copyright &copy; 2018 | Derek Cutler
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </footer>
+    </div>
 
 </body>
-
-
-
 
 
 </html>
