--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,59 @@
 
 
         </nav>
+        <nav>
+            <br>
+        </nav>
+        <div class="container">
+            <div class="bg-light text-dark">
+                <div class="bg-light text-dark">
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="col=md-11">
+                            <h2>Contact:</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10">
+                            <div form class="form-inline">
+
+                                <form action="https://formspree.io/derekpcutler@gmail.com" method="POST">
+                                    <div class="row">
+                                        Name
+                                    </div>
+                                    <div class="row">
+                                        <input type="text" name="name" value="  John Smith">
+                                        <div class="row"></div>
+                                    </div>
+                                    <div class="row"><br></div>
+                                    <div class="row">
+                                        Email</div>
+                                    <div class="row">
+                                        <input type="text" name="_replyto" value="  example@gmail.com">
+                                        <div class="row"></div>
+                                    </div>
+                                    <div class="row"><br></div>
+                                    <div class="row">
+                                        Message
+                                    </div>
+                                    <div class="row">
+                                        <textarea name="message" rows="13">  Message...</textarea><br><br>
+                                    </div>
+                                    <div class="row"><br></div>
+                                    <div class="row">
+                                        <input type="submit" value="Submit"><br><br>
+                                    </div>
+                                    <div class="row"><br></div>
+                                </form>
+
+                            </div>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <nav>
             <br>
