--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="col-md-1"></div>
                         <div class="col-md-2">
                             <div class="aboutpicture">
-                                <img src="assets/images/Rock.jpg" alt="Derek" width="230px" height="230px"></div>
+                                <img image="img-fluid" src="assets/images/Rock.jpg" alt="Derek" width="230px" height="230px" ></div>
                         </div>
                         <div class="col-md-1"></div>
                         <div class="col-md-7">
