--- a/portfolio.html
+++ b/portfolio.html
@@ -58,23 +58,23 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4"><img src="assets/images/Mountain.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Ancient.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Alta.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Mountain.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Ancient.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Alta.jpg" alt="Derek" width="250px" height="250px"></div>
                 </div>
 
 
                 <div class="row">
-                    <div class="col-md-4"><img src="assets/images/Purdy.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Supai.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Slabs.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Purdy.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Supai.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Slabs.jpg" alt="Derek" width="250px" height="250px"></div>
                 </div>
 
 
                 <div class="row">
-                    <div class="col-md-4"><img src="assets/images/Boat.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Splash.jpg" alt="Derek" width="250px" height="250px"></div>
-                    <div class="col-md-4"><img src="assets/images/Jump.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Boat.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Splash.jpg" alt="Derek" width="250px" height="250px"></div>
+                    <div class="img-fluid"><img src="assets/images/Jump.jpg" alt="Derek" width="250px" height="250px"></div>
 
                 </div>
 
